fix button was disabled when overflow body is set relative

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 html,
 body {
-  position: relative;
+  /* position: relative; */
   overflow-x: hidden;
 }
